--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "author": "Renard Bergson",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "formidable-serverless": "^1.1.1",
+    "mongoose": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
